[project]
name = "pytest-markdown-console"
version = "0.0.1.dev1"
description = "A pytest extension to test console code blocks in markdown files."
readme = "README.md"
authors = [
    { name = "confarg", email = "280620574+confarg@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pytest>=8",
]
license = "MPL-2.0"

[project.entry-points."pytest11"]
markdown-console = "pytest_markdown_console"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
]
