[project]
authors = [
    { name = "confarg", email = "280620574+confarg@users.noreply.github.com" },
]
dependencies = ["pytest>=8"]
description = "A pytest plugin to test console code blocks in markdown files."
license = "MPL-2.0"
name = "pytest-markdown-console"
readme = "README.md"
requires-python = ">=3.12"
version = "0.0.1"

[project.entry-points."pytest11"]
markdown-console = "pytest_markdown_console"

[build-system]
build-backend = "uv_build"
requires      = ["uv_build>=0.11.13,<0.12.0"]

[dependency-groups]
dev = ["pre-commit>=4.6.0", "pytest>=9.0.3", "pytest-cov>=7.1.0", "ty>=0.0.40"]
